# blog-opentelemetry-copilot-root-cause-analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
blog/: BLOG.md
blog/diagrams/: 1-introduction-general-setup.jam  2-copilot-architecture.jam  3-environment-setup.jam  diagrams.drawio
environment/: Makefile  docker-compose.app.yaml  docker-compose.communication.yaml  docker-compose.observability.yaml
environment/mount/: grafana-tempo.yaml  otel-collector-config.yaml
services/orders-service/: Makefile  pyproject.toml
services/orders_service/: Dockerfile  Makefile  README.md  docker-compose.app.yml  docker-compose.env.yml  docker-compose.yml  orders.http  pyproject.toml
services/orders_service/src/: __init__.py  main.py
services/products-service/: Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
services/products-service/alembic/: env.py
services/products-service/alembic/versions/: 0001_create_products_table.py
services/products_service/: Dockerfile  Makefile  README.md  alembic.ini  all-docker-compose.yml  docker-compose.app.yml  docker-compose.env.yml  docker-compose.yml  products.http  pyproject.toml
services/products_service/alembic/: env.py
services/products_service/alembic/versions/: 0001_create_products_table.py
services/products_service/src/: main.py
