[project]
name = "products-service"
version = "0.1.0"
description = "A service for managing products in an e-commerce application. See README for more details."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "ruff>=0.12.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
